# mev-commit-explorer

./: README.md  docker-compose.yml
.github/workflows/: ci-backend.yml
backend/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  test_api.py
backend/api/: database.py  main.py  models.py
backend/tests/: conftest.py  test_endpoints.py  test_models.py
common/: README.md  db_lock.py
db/: Dockerfile  entrypoint.sh  explore.ipynb  pyproject.toml
db/pipe/: data_processing.py  query_commits.py
frontend/: Dockerfile  entrypoint.sh  package-lock.json  package.json
frontend/src/: Aggregations.css  Aggregations.js  Analytics.css  Analytics.js  App.css  App.js  Preconfs.css  Preconfs.js
