[project]
name = "backend-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Evan-Kim2028", email = "ekcopersonal@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.2",
    "polars>=1.9.0",
    "uvicorn>=0.32.0",
    "duckdb>=1.1.2",
    "pyarrow>=17.0.0",
    "fastapi-cors>=0.0.6",
    "requests>=2.26.0",
    "pydantic>=2.9.2",
    "pytest>=8.3.3",
    "httpx>=0.27.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend_api"]
